<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:padding="30dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/emailInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/emailField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textColor="@color/color_212121"
            android:textSize="16sp"
            android:hint="@string/hint_email" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_below="@id/emailInputLayout"
        android:id="@+id/passwordInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/passwordField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/color_212121"
            android:textSize="16sp"
            android:hint="@string/hint_password" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_below="@id/passwordInputLayout"
        android:id="@+id/confirmPasswordInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/confirmPasswordField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/color_212121"
            android:textSize="16sp"
            android:hint="@string/hint_confirm_password" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:background="@color/colorPrimary"
        android:layout_below="@id/confirmPasswordInputLayout"
        android:id="@+id/signUpButton"
        android:text="@string/sign_up"
        android:textSize="14sp"
        android:textColor="@android:color/white"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <Button
        android:background="@color/facebookColor"
        android:layout_below="@id/signUpButton"
        android:id="@+id/facebookButton"
        android:text="@string/sign_in_with_facebook"
        android:textSize="14sp"
        android:textColor="@android:color/white"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <TextView
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textColor="@color/color_bdbdbd"
        android:gravity="center"
        android:text="@string/agreement_description" />

</RelativeLayout>
