<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="30dp"
    android:orientation="vertical"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/emailInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/emailField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textColor="@color/color_212121"
            android:textSize="16sp"
            android:hint="@string/hint_email" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_below="@id/emailInputLayout"
        android:id="@+id/passwordInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/passwordField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/color_212121"
            android:textSize="16sp"
            android:hint="@string/hint_password" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:gravity="center_horizontal"
        android:text="@string/forgot_password_underbar"
        android:layout_marginTop="56dp"
        android:textSize="12sp"
        android:textColor="@color/color_212121"
        android:id="@+id/forgotPasswordField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:background="@color/colorPrimary"
        android:id="@+id/signInButton"
        android:text="@string/sign_in"
        android:textSize="14sp"
        android:textColor="@android:color/white"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <Button
        android:background="@color/facebookColor"
        android:layout_below="@id/signInButton"
        android:id="@+id/facebookButton"
        android:text="@string/sign_in_with_facebook"
        android:textSize="14sp"
        android:textColor="@android:color/white"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="40dp" />

</LinearLayout>
