<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingTop="37dp"
    android:paddingBottom="18dp"
    android:paddingLeft="28dp"
    android:paddingRight="28dp"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/textField"
        android:textColor="@color/color_757575"
        android:textSize="12sp"
        android:text="@string/forgot_password_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.design.widget.TextInputLayout
        android:layout_marginTop="10dp"
        android:layout_below="@id/textField"
        android:id="@+id/emailInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/emailField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/color_212121"
            android:textSize="16sp"
            android:hint="@string/hint_password" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_alignParentBottom="true"
        android:text="@string/send"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:id="@+id/sendButton"
        android:layout_width="match_parent"
        android:layout_height="40dp" />

</RelativeLayout>
