<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="32dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/descriptionField"
        android:textColor="@color/color_212121"
        android:textSize="14sp"
        android:text="@string/bank_info_account_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.design.widget.TextInputLayout
        android:layout_below="@id/descriptionField"
        android:layout_marginTop="15dp"
        android:id="@+id/idInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/idField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@color/color_212121"
            android:textSize="16sp"
            android:hint="@string/bank_id" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_below="@id/idInputLayout"
        android:id="@+id/passwordInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/passwordField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@color/color_212121"
            android:textSize="16sp"
            android:hint="@string/bank_password" />
    </android.support.design.widget.TextInputLayout>

</RelativeLayout>

