<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="32dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/descriptionField"
        android:textColor="@color/color_212121"
        android:textSize="14sp"
        android:text="@string/user_info_name_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.design.widget.TextInputLayout
        android:layout_below="@id/descriptionField"
        android:layout_marginTop="15dp"
        android:id="@+id/phoneInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/phoneField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:textColor="@color/color_212121"
            android:textSize="16sp"
            android:maxLines="1"
            android:maxLength="12"
            android:hint="@string/hint_phone" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_below="@id/phoneInputLayout"
        android:id="@+id/birthInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/birthField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textColor="@color/color_212121"
            android:textSize="16sp"
            android:maxLines="1"
            android:maxLength="10"
            android:hint="@string/hint_birth" />
    </android.support.design.widget.TextInputLayout>

</RelativeLayout>

