<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="32dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/descriptionField"
        android:textColor="@color/color_212121"
        android:textSize="14sp"
        android:text="@string/user_info_name_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.design.widget.TextInputLayout
        android:layout_below="@id/descriptionField"
        android:layout_marginTop="15dp"
        android:id="@+id/firstNameInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/firstNameField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@color/color_212121"
            android:textSize="16sp"
            android:maxLength="35"
            android:maxLines="1"
            android:hint="@string/first_name" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_below="@id/firstNameInputLayout"
        android:id="@+id/lastNameInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/lastNameField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@color/color_212121"
            android:textSize="16sp"
            android:maxLength="35"
            android:maxLines="1"
            android:hint="@string/last_name" />
    </android.support.design.widget.TextInputLayout>

</RelativeLayout>

