<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="32dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/descriptionField"
        android:textColor="@color/color_212121"
        android:textSize="14sp"
        android:text="@string/user_info_name_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.design.widget.TextInputLayout
        android:layout_below="@id/descriptionField"
        android:layout_marginTop="15dp"
        android:id="@+id/address1InputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/address1Field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@color/color_212121"
            android:textSize="16sp"
            android:hint="@string/hint_address_1" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_below="@id/address1InputLayout"
        android:id="@+id/address2InputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/address2Field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@color/color_212121"
            android:textSize="16sp"
            android:hint="@string/hint_address_2_option" />
    </android.support.design.widget.TextInputLayout>

    <com.android.nobug.view.listview.BaseListView
        android:divider="@color/transparent_color"
        android:background="@android:color/white"
        android:visibility="gone"
        android:layout_below="@+id/address1InputLayout"
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</RelativeLayout>

